added about page and fix google maps iframe responsiveness

--- a/index.html
+++ b/index.html
@@ -15,48 +15,55 @@
 </head>
 
 <body>
-    <div class="container-fluid p-0">
+    <header>
+        <div class="container-fluid p-0">
 
-        <!-- Navbar -->
-        <div class="row g-0">
-            <div class="col-12">
-                <nav class="navbar navbar-expand-lg p-4">
-                    <div class="container flex-lg-column align-items-lg-center">
-                        
-                        <!-- Logo -->
-                        <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
-                        <img src="assets/img/logo.png" alt="Osaka Logo" width="40" height="40" class="me-2"/>
-                        <span class="fw-bold">Osaka</span>
-                        </a>
-                        <!-- Toggle Button -->
-                        <button
-                        class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <!-- Nav Links -->
-                        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-                            <ul class="navbar-nav gap-4 text-uppercase nav-menu">
-                                <li class="nav-item">
-                                <a class="nav-link active" href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                <a class="nav-link" href="#">Cultures</a>
-                                </li>
-                                <li class="nav-item">
-                                <a class="nav-link" href="#">Hotels</a>
-                                </li>
-                            </ul>
+            <!-- Navbar -->
+            <div class="row g-0">
+                <div class="col-12">
+                    <nav class="navbar navbar-expand-lg p-4">
+                        <div class="container flex-lg-column align-items-lg-center">
+                            
+                            <!-- Logo -->
+                            <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
+                            <img src="assets/img/logo.png" alt="Osaka Logo" width="40" height="40" class="me-2"/>
+                            <span class="fw-bold">Osaka</span>
+                            </a>
+                            <!-- Toggle Button -->
+                            <button
+                            class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <!-- Nav Links -->
+                            <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                                <ul class="navbar-nav gap-4 text-uppercase nav-menu">
+                                    <li class="nav-item">
+                                    <a class="nav-link active" href="index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link active" href="about.html">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="#">Cultures</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="#">Hotels</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
+                </div>
             </div>
         </div>
 
+    </header>
 
+    <div class="container-fluid p-0">
         <!-- Osaka Banner -->
         <div class="row g-0 align-items-center banner mb-4">
             <div class="col-md-6">
-                <img src="assets/img/banner.webp" alt="Osaka City View"
+                <img src="assets/img/banner.webp"
                     class="img-fluid w-100 banner-img" />
             </div>
             <div class="col-md-6 text-center text-md-start p-5 fade-in">
@@ -89,7 +96,7 @@
                         <div class="col-xl-3 col-md-6 col-sm-12">
                             <div class="card h-100 shadow-sm border-0">
                                 <img src="assets/img/osaka_attractions/universal-studios.jpg"
-                                class="card-img-top rounded-top" alt="Universal Studios Japan" />
+                                class="card-img-top rounded-top"/>
                                 <div class="card-body text-center">
                                     <h5 class="card-title fw-semibold">Universal Studios Japan</h5>
                                     <p class="card-text text-muted">
@@ -103,7 +110,7 @@
                         <div class="col-xl-3 col-md-6 col-sm-12">
                             <div class="card h-100 shadow-sm border-0">
                                 <img src="assets/img/osaka_attractions/osaka-castle.jpg"
-                                class="card-img-top rounded-top" alt="Osaka Castle" />
+                                class="card-img-top rounded-top"/>
                                 <div class="card-body text-center">
                                     <h5 class="card-title fw-semibold">Osaka Castle</h5>
                                     <p class="card-text text-muted">
@@ -117,7 +124,7 @@
                         <div class="col-xl-3 col-md-6 col-sm-12">
                             <div class="card h-100 shadow-sm border-0">
                                 <img src="assets/img/osaka_attractions/osaka-aquarium.jpg"
-                                class="card-img-top rounded-top" alt="Osaka Aquarium Kaiyukan" />
+                                class="card-img-top rounded-top"/>
                                 <div class="card-body text-center">
                                     <h5 class="card-title fw-semibold">Osaka Aquarium Kaiyukan</h5>
                                     <p class="card-text text-muted">
@@ -131,7 +138,7 @@
                         <div class="col-xl-3 col-md-6 col-sm-12">
                             <div class="card h-100 shadow-sm border-0">
                                 <img src="assets/img/osaka_attractions/umeda-sky-bulding.avif"
-                                class="card-img-top rounded-top" alt="Umeda Sky Building" />
+                                class="card-img-top rounded-top"/>
                                 <div class="card-body text-center">
                                     <h5 class="card-title fw-semibold">Umeda Sky Building</h5>
                                     <p class="card-text text-muted">
@@ -165,7 +172,7 @@
 
                 <div class="carousel-item active">
                     <div class="card border-0 rounded-4 overflow-hidden shadow-sm">
-                        <img src="assets/img/osaka_food/osaka-food guide.jpg" class="card-img" alt="Osaka Food Guide">
+                        <img src="assets/img/osaka_food/osaka-food guide.jpg" class="card-img">
                         <div class="card-img-overlay d-flex flex-column justify-content-end p-3 gradient-overlay">
                             <h5 class="fw-bold text-white mb-1"><i class="bi bi-egg-fried me-2"></i>Osaka Food Guide</h5>
                         </div>
@@ -175,7 +182,7 @@
                 <div class="carousel-item">
                     <div class="card border-0 rounded-4 overflow-hidden shadow-sm">
                         <a href="https://tabelog.com/en/osaka/">
-                            <img src="assets/img/osaka_food/banner-osaka.jpg" class="card-img" alt="Best Osaka Restaurants">
+                            <img src="assets/img/osaka_food/banner-osaka.jpg" class="card-img">
                             <div class="card-img-overlay d-flex flex-column justify-content-end p-3 gradient-overlay">
                                 <h5 class="fw-bold text-white mb-1"><i class="bi bi-bag me-2"></i>Best Osaka Restaurants</h5>
                             </div>
@@ -186,7 +193,7 @@
                 <div class="carousel-item">
                     <div class="card border-0 rounded-4 overflow-hidden shadow-sm">
                         <a href="https://migrationology.com/kuromon-ichiba-market-osaka/">
-                            <img src="assets/img/osaka_food/kuromon-ichiba-market.jpg" class="card-img" alt="Osaka Kuromon Ichiba Market">
+                            <img src="assets/img/osaka_food/kuromon-ichiba-market.jpg" class="card-img">
                             <div class="card-img-overlay d-flex flex-column justify-content-end p-3 gradient-overlay">
                                 <h5 class="fw-bold text-white mb-1"><i class="bi bi-bag me-2"></i>Osaka Kuromon Ichiba Market</h5>
                             </div>
@@ -251,6 +258,18 @@
             </div>
         </div>
     </div>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center justify-content-center pt-5 pb-4 mt-5">
+        <div class="container text-center justify-content-center">
+            <div class="row align-items-center">
+                <div class="col-12">
+                    <p class="text-center">
+                    <strong>WEBSITE ABOUT OSAKA JAPAN Created by John Ralph Alcantara BSIT 3-1</strong> | Content © 2025 garu10 |  All Rights Reserved
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Bootstrap Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
