Added culture.html and fix img directory

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <header>
-    <div class="container-fluid p-0">
+      <header>
+        <div class="container-fluid p-0">
 
             <!-- Navbar -->
             <div class="row g-0">
@@ -28,7 +28,6 @@
                             
                             <!-- Logo -->
                             <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
-                            <img src="assets/img/logo.png" alt="Osaka Logo" width="40" height="40" class="me-2"/>
                             <span class="fw-bold">Osaka</span>
                             </a>
                             <!-- Toggle Button -->
@@ -46,7 +45,7 @@
                                     <a class="nav-link active" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
-                                    <a class="nav-link" href="#">Cultures</a>
+                                    <a class="nav-link" href="culture.html">Cultures</a>
                                     </li>
                                     <li class="nav-item">
                                     <a class="nav-link" href="#">Hotels</a>
@@ -58,13 +57,14 @@
                 </div>
             </div>
         </div>
-  </header>
+
+    </header>
 
   <!-- about osaka intro -->
   <div class="container my-5 py-5">
     <div class="row align-items-center">
       <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
-        <img src="assets/img/istockphoto-503456623-612x612.jpg"
+        <img src="assets/img/about/istockphoto-503456623-612x612.jpg"
           class="img-fluid rounded shadow-sm w-100" />
       </div>
       <div class="col-lg-6 col-md-12">
@@ -84,10 +84,10 @@
     </div>
   </div>
 
-  <!-- major districts in osaka -->
+  <!-- major districts in osaka section - card--bootstrap -->
   <div class="container my-5">
     <div class="row text-center mb-4">
-      <h2 class="fw-bold">Major Districts of Osaka</h2>
+      <h2 class="fw-bold">Major Districts</h2>
       <p class="text-muted">
         Each area of Osaka has its own unique charm and must-see attractions.
       </p>
@@ -95,7 +95,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card border-0 shadow-sm h-100">
-          <img src="assets/img/osaka_attractions/dotonbori.avif" class="card-img-top rounded-top">
+          <img src="assets/img/about/dotonbori.avif" class="card-img-top rounded-top">
           <div class="card-body">
             <h5 class="card-title fw-bold">Dotonbori</h5>
             <p class="card-text text-muted">
@@ -106,7 +106,7 @@
       </div>
       <div class="col-md-4">
         <div class="card border-0 shadow-sm h-100">
-          <img src="assets/img/osaka_attractions/umeda-sky-bulding.avif" class="card-img-top rounded-top">
+          <img src="assets/img/about/umeda-sky-bulding.avif" class="card-img-top rounded-top">
           <div class="card-body">
             <h5 class="card-title fw-bold">Umeda</h5>
             <p class="card-text text-muted">
@@ -117,7 +117,7 @@
       </div>
       <div class="col-md-4">
         <div class="card border-0 shadow-sm h-100">
-          <img src="assets/img/osaka_attractions/minamin-namba.jpg" class="card-img-top rounded-top">
+          <img src="assets/img/about/minamin-namba.jpg" class="card-img-top rounded-top">
           <div class="card-body">
             <h5 class="card-title fw-bold">Namba</h5>
             <p class="card-text text-muted">
@@ -129,11 +129,11 @@
     </div>
   </div>
 
-  <!-- transpo in osaka -->
+  <!-- transpo in osaka section - list-group -->
   <div class="container my-5 py-5">
     <div class="row align-items-center">
       <div class="col-lg-6 order-lg-2">
-        <img src="assets/img/20230622_172520_c3bbe34d_w1920.webp" class="img-fluid rounded shadow-sm w-100">
+        <img src="assets/img/about/20230622_172520_c3bbe34d_w1920.webp" class="img-fluid rounded shadow-sm w-100">
       </div>
       <div class="col-lg-6 order-lg-1">
         <h2 class="fw-bold mb-3">Getting Around Osaka</h2>
@@ -151,7 +151,7 @@
     </div>
   </div>
 
-  <!-- tips for travelling in osaka -->
+  <!-- tips for travelling in osaka section- vard--bootstrap-->
   <div class="container my-5">
     <div class="row text-center mb-4">
       <h2 class="fw-bold">Traveler’s Tips</h2>
@@ -188,8 +188,7 @@
         <div class="row align-items-center">
             <div class="col-12">
                 <p class="text-center">
-                <strong>WEBSITE ABOUT OSAKA JAPAN Created by John Ralph Alcantara BSIT 3-1</strong> | Content © 2025 garu10 |  All Rights Reserved
-                </p>
+                 © 2025 Osaka, Japan. Designed and developed by John Ralph Alcantara.
             </div>
         </div>
     </div>
