--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                             
                             <!-- Logo -->
                             <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
-                            <img src="assets/img/logo.png" alt="Osaka Logo" width="40" height="40" class="me-2"/>
                             <span class="fw-bold">Osaka</span>
                             </a>
                             <!-- Toggle Button -->
@@ -44,7 +43,7 @@
                                     <a class="nav-link active" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
-                                    <a class="nav-link" href="#">Cultures</a>
+                                    <a class="nav-link" href="culture.html">Cultures</a>
                                     </li>
                                     <li class="nav-item">
                                     <a class="nav-link" href="#">Hotels</a>
@@ -66,18 +65,18 @@
                 <img src="assets/img/banner.webp"
                     class="img-fluid w-100 banner-img" />
             </div>
-            <div class="col-md-6 text-center text-md-start p-5 fade-in">
+            <div class="col-md-6 text-center text-md-start p-5">
                 <h1 class="mb-3">Welcome To Osaka, Japan!</h1>
                 <p class="mb-4">
                     Explore Japan’s vibrant city known for its modern architecture, nightlife, and delicious street
                     food.
                 </p>
-                <a href="#" class="btn btn-primary px-4 py-2">Learn More</a>
+                <a href="about.html" class="btn btn-primary px-4 py-2">Learn More</a>
             </div>
         </div>
     </div>
 
-    <!-- Top Attractions Section -->
+    <!-- Top Attractions section - card--bootstrap -->
     <div class="container-fluid my-5 py-5">
         <div class="row">
             <div class="col-12 text-center mb-5">
@@ -155,7 +154,7 @@
         </div>
     </div>
 
-        <!-- Food Spots Section -->
+        <!-- Food Spots Section - carousel--bootrap -->
     <div class="container-fluid my-5 py-5">
         <div class="row">
             <div class="col-12 text-center mb-5">
@@ -220,7 +219,7 @@
         </div>
     </div>
 
-    <!-- Google Map - Osaka Section-->
+    <!-- Google Map - Osaka Section (iframe used)-->
     <div class="container-fluid my-5 py-5">
         <div class="row justify-content-center">
             <div class="col-12">
@@ -232,10 +231,10 @@
                         </div>
                         <div class="col-lg-6 col-md-9 col-sm-12">
                             <div class="osaka-gmap">
-                                <div class="osaka-gmap-iframe shadow">
+                                <div class="osaka-gmap-iframe">
                                     <iframe 
                                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104995.0163727996!2d135.4036370373729!3d34.677570376322635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6553406e2e1%3A0xc55bc16ee46a2fe7!2sOsaka%2C%20Japan!5e0!3m2!1sen!2sph!4v1761827467722!5m2!1sen!2sph" 
-                                        width="600" 
+                                        width="100%" 
                                         height="450" 
                                         style="border:0;" 
                                         allowfullscreen="" 
@@ -250,21 +249,13 @@
             </div>
         </div>
     </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                Osaka info
-            </div>
-        </div>
-    </div>
     <!-- Footer -->
     <footer class="bg-dark text-white text-center justify-content-center pt-5 pb-4 mt-5">
         <div class="container text-center justify-content-center">
             <div class="row align-items-center">
                 <div class="col-12">
                     <p class="text-center">
-                    <strong>WEBSITE ABOUT OSAKA JAPAN Created by John Ralph Alcantara BSIT 3-1</strong> | Content © 2025 garu10 |  All Rights Reserved
+                     © 2025 Osaka, Japan. Designed and developed by John Ralph Alcantara.
                     </p>
                 </div>
             </div>
