--- a/culture.html
+++ b/culture.html
@@ -19,7 +19,6 @@
 <body>
     <header>
         <div class="container-fluid p-0">
-
             <!-- Navbar -->
             <div class="row g-0">
                 <div class="col-12">
@@ -28,27 +27,27 @@
                             
                             <!-- Logo -->
                             <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
-                            <span class="fw-bold">Osaka</span>
+                                <span class="fw-bold">OSAKA</span>
                             </a>
                             <!-- Toggle Button -->
                             <button
-                            class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                                class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
                             </button>
                             <!-- Nav Links -->
                             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                                 <ul class="navbar-nav gap-4 text-uppercase nav-menu">
                                     <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Home</a>
+                                        <a class="nav-link active" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                    <a class="nav-link active" href="about.html">About</a>
+                                        <a class="nav-link active" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
-                                    <a class="nav-link" href="culture.html">Cultures</a>
+                                        <a class="nav-link" href="culture.html">Cultures</a>
                                     </li>
                                     <li class="nav-item">
-                                    <a class="nav-link" href="#">Hotels</a>
+                                        <a class="nav-link" href="hotels.html">Hotels</a>
                                     </li>
                                 </ul>
                             </div>
