--- a/culture.html
+++ b/culture.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Osaka Culture | Osaka (大阪, Ōsaka), Japan</title>
+    <title>Osaka (大阪, Ōsaka), Japan</title>
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
 
     <!-- External CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
@@ -12,8 +13,6 @@
     <!-- Bootstrap CSS v5.3.2 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -26,7 +25,7 @@
                         <div class="container flex-lg-column align-items-lg-center">
                             
                             <!-- Logo -->
-                            <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
+                            <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="index.html">
                                 <span class="fw-bold">OSAKA</span>
                             </a>
                             <!-- Toggle Button -->
@@ -36,15 +35,15 @@
                             </button>
                             <!-- Nav Links -->
                             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-                                <ul class="navbar-nav gap-4 text-uppercase nav-menu">
+                                <ul class="navbar-nav nav-underline gap-4 text-uppercase nav-menu">
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="index.html">Home</a>
+                                        <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="about.html">About</a>
+                                        <a class="nav-link" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="culture.html">Cultures</a>
+                                        <a class="nav-link active" aria-current="page" href="culture.html">Cultures</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="hotels.html">Hotels</a>
@@ -62,7 +61,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <h1 class="fw-bold mb-3">Rich Culture</h1>
-                <p class="text-muted">
+                <p class="text-muted text-justify-custom">
                     Osaka’s culture reflects a unique blend of humor, warmth, and tradition. From its famous performing
                     arts to
                     centuries-old festivals and street fashion, the city embodies the lively and generous spirit of its
@@ -97,9 +96,6 @@
                     </p>
                     <img src="assets/img/culture/kuidaore.jpeg" class="img-fluid rounded mt-3">
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
             </div>
         </div>
     </div>
@@ -108,7 +104,7 @@
     <div class="container my-5">
         <div class="row text-center mb-4">
             <h2 class="fw-bold">Traditional Arts & Performances</h2>
-            <p class="text-muted">Osaka has a deep connection to Japan’s classic performing arts, including Bunraku and
+            <p class="text-muted ">Osaka has a deep connection to Japan’s classic performing arts, including Bunraku and
                 Kabuki.
             </p>
         </div>
@@ -118,7 +114,7 @@
                     <img src="assets/img/culture/bunraku.jpg" class="card-img-top rounded-top">
                     <div class="card-body">
                         <h5 class="fw-bold">Bunraku Puppet Theater</h5>
-                        <p class="text-muted">
+                        <p class="text-muted text-justify-custom">
                             Originating in Osaka during the Edo period, Bunraku is a traditional puppet theatre
                             accompanied by shamisen
                             music and narrative chanting.
@@ -136,7 +132,7 @@
                     <img src="assets/img/culture/kabuki.jpg" class="card-img-top rounded-top">
                     <div class="card-body">
                         <h5 class="fw-bold">Kabuki Performances</h5>
-                        <p class="text-muted">
+                        <p class="text-muted text-justify-custom">
                             Dotonbori’s Shochikuza Theatre hosts Kabuki — known for its dramatic acting, colorful
                             costumes, and live
                             orchestra.
@@ -154,7 +150,7 @@
                     <img src="assets/img/culture/manzai.webp" class="card-img-top rounded-top">
                     <div class="card-body">
                         <h5 class="fw-bold">Manzai Comedy</h5>
-                        <p class="text-muted">
+                        <p class="text-muted text-justify-custom">
                             Manzai — Osaka’s rapid-fire style of stand-up comedy — features duos exchanging clever jokes
                             and playful
                             banter.
