--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Osaka (大阪, Ōsaka), Japan</title>
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
 
     <!-- External CSS -->
     <link href="assets/css/style.css" rel="stylesheet" />
-
     <!-- Bootstrap CSS v5.3.2 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -24,7 +24,7 @@
                         <div class="container flex-lg-column align-items-lg-center">
                             
                             <!-- Logo -->
-                            <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
+                            <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="in">
                                 <span class="fw-bold">OSAKA</span>
                             </a>
                             <!-- Toggle Button -->
@@ -34,12 +34,12 @@
                             </button>
                             <!-- Nav Links -->
                             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-                                <ul class="navbar-nav gap-4 text-uppercase nav-menu">
+                                <ul class="navbar-nav nav-underline text-uppercase nav-menu">
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="index.html">Home</a>
+                                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="about.html">About</a>
+                                        <a class="nav-link" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="culture.html">Cultures</a>
@@ -65,9 +65,18 @@
             </div>
             <div class="col-md-6 text-center text-md-start p-5">
                 <h1 class="mb-3">Welcome To Osaka, Japan!</h1>
-                <p class="mb-4">
+                <p class="mb-4 text-justify-custom">
                     Explore Japan’s vibrant city known for its modern architecture, nightlife, and delicious street
-                    food.
+                    food. Often called "Tenka no Daidokoro" (The Nation's Kitchen), Osaka blends historical charm with
+                    a dynamic urban atmosphere.
+                </p>
+                <p class="mb-4 text-justify-custom">
+                    As Japan's third-largest city, Osaka is the economic heart of the Kansai region, serving as a
+                    major center for commerce and trade for centuries. Locals here are known for their warm,
+                    outspoken, and humorous personality (often associated with owarai comedy), setting them apart
+                    from the more reserved character of Tokyo. This welcoming spirit makes exploring its bustling
+                    districts, from the high-fashion of Shinsaibashi to the retro charm of Shinsekai, a lively
+                    experience.
                 </p>
                 <a href="about.html" class="btn btn-primary px-4 py-2">Learn More</a>
             </div>
@@ -99,7 +108,7 @@
                                     <p class="card-text text-muted">
                                         Experience world-class attractions and entertainment in Osaka.
                                     </p>
-                                    <a href="#" class="btn btn-primary">Learn More</a>
+                                    <a href="https://www.japan-guide.com/e/e4021.html" class="btn btn-primary">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -113,7 +122,7 @@
                                     <p class="card-text text-muted">
                                         Experience world-class attractions and entertainment in Osaka.
                                     </p>
-                                    <a href="#" class="btn btn-primary">Learn More</a>
+                                    <a href="https://www.japan-guide.com/e/e4000.html" class="btn btn-primary">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -127,7 +136,7 @@
                                     <p class="card-text text-muted">
                                         Experience world-class attractions and entertainment in Osaka.
                                     </p>
-                                    <a href="#" class="btn btn-primary">Learn More</a>
+                                    <a href="https://www.japan-guide.com/e/e4004.html" class="btn btn-primary">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +150,7 @@
                                     <p class="card-text text-muted">
                                         Experience world-class attractions and entertainment in Osaka.
                                     </p>
-                                    <a href="#" class="btn btn-primary">Learn More</a>
+                                    <a href="https://www.japan-guide.com/e/e4002.html" class="btn btn-primary">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -224,8 +233,13 @@
                 <div class="container-lg px-5 px-md-6 px-lg-7">
                     <div class="row g-4 justify-content-center">
                         <div class="col-lg-6 col-md-9 col-sm-12">
-                            <h1>Osaka (大阪, Ōsaka) MAP</h1>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum suscipit sint itaque, quos pariatur aut? Incidunt praesentium nam dolorem doloribus quaerat aliquam, nobis dolor vitae cumque, sapiente quos delectus distinctio?
+                            <h1 class="text-size">Osaka (大阪, Ōsaka) MAP</h1>
+                            <p class="text-justify-custom">
+                                Use the map to locate the city's must-see attractions, 
+                                including the historic Osaka Castle, the neon-drenched 
+                                entertainment hub of Dōtonbori (home of the Glico Man sign), 
+                                and the retro-futuristic charm of the Shinsekai district.
+                            </p>
                         </div>
                         <div class="col-lg-6 col-md-9 col-sm-12">
                             <div class="osaka-gmap">
