--- a/about.html
+++ b/about.html
@@ -4,16 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>About Osaka | Osaka (大阪, Ōsaka), Japan</title>
+  <title>Osaka (大阪, Ōsaka), Japan</title>
+  <link rel="icon" type="image/png" href="assets/img/logo.png">
 
   <!-- External CSS -->
   <link href="assets/css/style.css" rel="stylesheet" />
-
   <!-- Bootstrap CSS v5.3.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <!-- Bootstrap Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <!-- font-awesome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -26,7 +28,7 @@
                         <div class="container flex-lg-column align-items-lg-center">
                             
                             <!-- Logo -->
-                            <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="#">
+                            <a class="navbar-brand d-flex align-items-center justify-content-start justify-content-lg-center mb-lg-3" href="index.html">
                                 <span class="fw-bold">OSAKA</span>
                             </a>
                             <!-- Toggle Button -->
@@ -36,12 +38,12 @@
                             </button>
                             <!-- Nav Links -->
                             <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-                                <ul class="navbar-nav gap-4 text-uppercase nav-menu">
+                                <ul class="navbar-nav nav-underline text-uppercase nav-menu">
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="index.html">Home</a>
+                                        <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="about.html">About</a>
+                                        <a class="nav-link active" aria-current="page" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="culture.html">Cultures</a>
@@ -57,131 +59,127 @@
             </div>
         </div>
     </header>
-
-  <!-- about osaka intro -->
-  <div class="container my-5 py-5">
-    <div class="row align-items-center">
-      <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
-        <img src="assets/img/about/istockphoto-503456623-612x612.jpg"
-          class="img-fluid rounded shadow-sm w-100" />
-      </div>
-      <div class="col-lg-6 col-md-12">
-        <h1 class="fw-bold mb-3">About Osaka</h1>
-        <p class="text-muted">
-          Osaka (大阪) is Japan’s third-largest city, known for its dynamic energy, 
-          friendly locals, and a perfect mix of traditional charm and urban vibrancy. 
-          Located in the Kansai region, it’s often called the “Kitchen of Japan” for its 
-          world-famous street food and culinary culture. Beyond its cuisine, Osaka offers 
-          thriving business districts, stunning architecture, and welcoming hospitality.
-        </p>
-        <p class="text-muted">
-          Whether you’re walking through the neon-lit streets of Dotonbori, taking a river cruise along the Okawa, 
-          or shopping in Shinsaibashi, Osaka blends history and modern life effortlessly.
-        </p>
-      </div>
+    <div class="container my-5 py-5">
+        <div class="row align-items-center">
+            <!-- about banner pic -->
+            <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
+                <img src="assets/img/about/istockphoto-503456623-612x612.jpg"
+                  class="img-fluid rounded shadow-sm w-100" />
+            </div>
+            <!-- intro subtitle -->
+            <div class="col-lg-6 col-md-12">
+                <h1 class="fw-bold mb-3">About Osaka</h1>
+                <p class="text-muted text-justify-custom">
+                  Osaka (大阪) is Japan’s third-largest city, known for its dynamic energy, 
+                  friendly locals, and a perfect mix of traditional charm and urban vibrancy. 
+                  Located in the Kansai region, it’s often called the “Kitchen of Japan” for its 
+                  world-famous street food and culinary culture. Beyond its cuisine, Osaka offers 
+                  thriving business districts, stunning architecture, and welcoming hospitality.
+                </p>
+                <p class="text-muted text-justify-custom">
+                  Whether you’re walking through the neon-lit streets of Dotonbori, taking a river cruise along the Okawa, 
+                  or shopping in Shinsaibashi, Osaka blends history and modern life effortlessly.
+                </p>
+            </div>
+        </div>
     </div>
-  </div>
-
-  <!-- major districts in osaka section - card--bootstrap -->
-  <div class="container my-5">
-    <div class="row text-center mb-4">
-      <h2 class="fw-bold">Major Districts</h2>
-      <p class="text-muted">
-        Each area of Osaka has its own unique charm and must-see attractions.
-      </p>
-    </div>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card border-0 shadow-sm h-100">
-          <img src="assets/img/about/dotonbori.avif" class="card-img-top rounded-top">
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Dotonbori</h5>
-            <p class="card-text text-muted">
-              The entertainment heart of Osaka — full of bright lights, street food, and the famous Glico Running Man sign.
+    <!-- major districts -->
+    <div class="container my-5">
+        <div class="row text-center mb-4">
+            <h2 class="fw-bold">Major Districts</h2>
+            <p class="text-muted">
+              Each area of Osaka has its own unique charm and must-see attractions.
             </p>
+        </div>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card border-0 shadow-sm h-100">
+                  <img src="assets/img/about/dotonbori.avif" class="card-img-top rounded-top">
+                  <div class="card-body">
+                      <h5 class="card-title fw-bold">Dotonbori</h5>
+                      <p class="card-text text-muted">
+                        The entertainment heart of Osaka — full of bright lights, street food, and the famous Glico Running Man sign.
+                      </p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card border-0 shadow-sm h-100">
+                  <img src="assets/img/about/umeda-sky-bulding.avif" class="card-img-top rounded-top">
+                  <div class="card-body">
+                      <h5 class="card-title fw-bold">Umeda</h5>
+                      <p class="card-text text-muted">
+                        A bustling business and shopping hub with skyscrapers, department stores, and the Umeda Sky Building Observatory.
+                      </p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card border-0 shadow-sm h-100">
+                  <img src="assets/img/about/minamin-namba.jpg" class="card-img-top rounded-top">
+                  <div class="card-body">
+                      <h5 class="card-title fw-bold">Namba</h5>
+                      <p class="card-text text-muted">
+                        Known for nightlife, entertainment, and easy access to Osaka’s top shopping districts.
+                      </p>
+                  </div>
+              </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card border-0 shadow-sm h-100">
-          <img src="assets/img/about/umeda-sky-bulding.avif" class="card-img-top rounded-top">
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Umeda</h5>
-            <p class="card-text text-muted">
-              A bustling business and shopping hub with skyscrapers, department stores, and the Umeda Sky Building Observatory.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card border-0 shadow-sm h-100">
-          <img src="assets/img/about/minamin-namba.jpg" class="card-img-top rounded-top">
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Namba</h5>
-            <p class="card-text text-muted">
-              Known for nightlife, entertainment, and easy access to Osaka’s top shopping districts.
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-
-  <!-- transpo in osaka section - list-group -->
-  <div class="container my-5 py-5">
-    <div class="row align-items-center">
-      <div class="col-lg-6 order-lg-2">
-        <img src="assets/img/about/20230622_172520_c3bbe34d_w1920.webp" class="img-fluid rounded shadow-sm w-100">
-      </div>
-      <div class="col-lg-6 order-lg-1">
-        <h2 class="fw-bold mb-3">Getting Around Osaka</h2>
-        <p class="text-muted">
-          Osaka’s transportation system is one of the most efficient in Japan. The Osaka Metro and JR lines connect 
-          every major district, making it easy for tourists to navigate. 
-          IC cards like ICOCA and Suica can be used for trains, buses, and even convenience store payments.
-        </p>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item"><i class="bi bi-train-front-fill me-2 text-primary"></i>Osaka Metro (Midosuji, Tanimachi, Chuo Lines)</li>
-          <li class="list-group-item"><i class="bi bi-bus-front-fill me-2 text-primary"></i>City Buses for local routes</li>
-          <li class="list-group-item"><i class="bi bi-geo-alt-fill me-2 text-primary"></i>JR Osaka Loop Line for sightseeing</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <!-- tips for travelling in osaka section- vard--bootstrap-->
-  <div class="container my-5">
-    <div class="row text-center mb-4">
-      <h2 class="fw-bold">Traveler’s Tips</h2>
-      <p class="text-muted">Make your trip to Osaka smooth and enjoyable with these simple tips.</p>
-    </div>
-    <div class="row g-4 justify-content-center">
-      <div class="col-md-3 col-sm-6">
-        <div class="card border-0 shadow-sm p-3 text-center h-100">
-          <i class="bi bi-coin text-warning fs-1 mb-3"></i>
-          <h5 class="fw-bold">Budget Friendly</h5>
-          <p class="text-muted">Many attractions are free, and local eateries offer amazing food at low prices.</p>
+    <!-- osaka transpo container -->
+    <div class="container my-5 py-5">
+        <div class="row align-items-center">
+            <div class="col-lg-6 order-lg-2">
+                <img src="assets/img/about/20230622_172520_c3bbe34d_w1920.webp" class="img-fluid rounded shadow-sm w-100">
+            </div>
+            <div class="col-lg-6 order-lg-1">
+                <h2 class="fw-bold mb-3">Getting Around Osaka</h2>
+                <p class="text-muted text-justify-custom">
+                  Osaka’s transportation system is one of the most efficient in Japan. The Osaka Metro and JR lines connect 
+                  every major district, making it easy for tourists to navigate. 
+                  IC cards like ICOCA and Suica can be used for trains, buses, and even convenience store payments.
+                </p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i class="fa fa-train me-2 text-primary"></i>Osaka Metro (Midosuji, Tanimachi, Chuo Lines)</li>
+                    <li class="list-group-item"><i class="fa fa-bus me-2 text-primary"></i>City Buses for local routes</li>
+                    <li class="list-group-item"><i class="fa fa-map-marker me-2 text-primary"></i>JR Osaka Loop Line for sightseeing</li>
+                </ul>
+            </div>
         </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="card border-0 shadow-sm p-3 text-center h-100">
-          <i class="bi bi-wifi text-primary fs-1 mb-3"></i>
-          <h5 class="fw-bold">Stay Connected</h5>
-          <p class="text-muted">Free Wi-Fi is available in most train stations and convenience stores.</p>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="card border-0 shadow-sm p-3 text-center h-100">
-          <i class="bi bi-clock-history text-danger fs-1 mb-3"></i>
-          <h5 class="fw-bold">Timing Matters</h5>
-          <p class="text-muted">Avoid rush hours (7–9AM, 5–7PM) for a more relaxed commute experience.</p>
-        </div>
-      </div>
     </div>
-  </div>
-
-  <!-- Footer -->
-<footer class="bg-dark text-white text-center justify-content-center pt-5 pb-4 mt-5">
+    <!-- tips for travelers container -->
+    <div class="container my-5">
+        <div class="row text-center mb-4">
+            <h2 class="fw-bold">Traveler’s Tips</h2>
+            <p class="text-muted">Make your trip to Osaka smooth and enjoyable with these simple tips.</p>
+        </div>
+        <div class="row g-4 justify-content-center">
+            <div class="col-md-3 col-sm-6">
+                <div class="card border-0 shadow-sm p-3 text-center h-100">
+                    <i class="fa fa-coins text-warning fs-1 mb-3"></i>
+                    <h5 class="fw-bold">Budget Friendly</h5>
+                    <p class="text-muted">Many attractions are free, and local eateries offer amazing food at low prices.</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class="card border-0 shadow-sm p-3 text-center h-100">
+                    <i class="fa fa-wifi text-primary fs-1 mb-3"></i>
+                    <h5 class="fw-bold">Stay Connected</h5>
+                    <p class="text-muted">Free Wi-Fi is available in most train stations and convenience stores.</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <div class="card border-0 shadow-sm p-3 text-center h-100">
+                    <i class="fa fa-clock text-danger fs-1 mb-3"></i>
+                    <h5 class="fw-bold">Timing Matters</h5>
+                    <p class="text-muted">Avoid rush hours (7–9AM, 5–7PM) for a more relaxed commute experience.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+  <!-- footer -->
+  <footer class="bg-dark text-white text-center justify-content-center pt-5 pb-4 mt-5">
     <div class="container text-center justify-content-center">
         <div class="row align-items-center">
             <div class="col-12">
@@ -191,8 +189,7 @@
         </div>
     </div>
 </footer>
-
-  <!-- Bootstrap Scripts -->
+<!-- bootstrap scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
