--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="container-lg px-5 px-md-6 px-lg-7">
                     <div class="row g-4 justify-content-center">
                         <div class="col-lg-6 col-md-9 col-sm-12">
-                            <h1 class="text-size">Osaka (大阪, Ōsaka) MAPS</h1>
+                            <h1 class="text-size">Osaka (大阪, Ōsaka) MAP</h1>
                             <p class="text-justify-custom">
                                 Use the map to locate the city's must-see attractions, 
                                 including the historic Osaka Castle, the neon-drenched 
